plugins {
    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
    id("com.github.johnrengelman.shadow") version "8.1.1"
    id 'org.spongepowered.mixin' version '0.7.+'
}

java.toolchain.languageVersion = JavaLanguageVersion.of(8)

forgeVersion = "1.16.5"

minecraft {
    mappings channel: 'official', version: '1.16.5'
    copyIdeResources = true
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {}

dependencies {
    minecraft 'net.minecraftforge:forge:1.16.5-36.2.34'

    implementation fg.deobf('pixelmon:Pixelmon-1.16.5-9.1.12-server:9.1.12')

    implementation fileTree(dir: 'libs', include: ['ExtraLib-forge-1.2.1-1.16.5.jar'])
}

mixin {
    add sourceSets.main, 'legendcontrol.refmap.json'
    config 'legendcontrol.mixins.json'
}

shadowJar {
    configurations = [project.configurations.shadow]
    setArchiveBaseName("${rootProject.name}-forge")
    setArchiveClassifier('')
}

jar.finalizedBy('shadowJar')
shadowJar.finalizedBy('reobfJar')
build.finalizedBy('versionedRelease')